app/globals.css
@import "tailwindcss";

:root {
  --background: #F9F9F9;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-dm-sans);
  --font-serif: var(--font-dm-serif);
}

body {
  background: var(--background);
  color: var(--foreground);
}

.text-gradient {
  background: linear-gradient(135deg, rgb(28, 28, 28) 0%, rgb(84, 84, 84) 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

